// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`测试不同宽度渲染 1`] = `
.c11 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  box-sizing: border-box;
  padding: 0 12px;
  font-size: 12px;
  line-height: 32px;
  height: 32px;
  cursor: pointer;
  -webkit-transition: background-color 150ms cubic-bezier(0.4,0,0.2,1),color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: background-color 150ms cubic-bezier(0.4,0,0.2,1),color 150ms cubic-bezier(0.4,0,0.2,1);
  color: rgba(102,102,102,1);
  background-color: rgba(255,255,255,1);
  font-weight: 400;
}

.c7:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c7:active {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c7 span {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  box-sizing: border-box;
  padding: 0 12px;
  font-size: 12px;
  line-height: 32px;
  height: 32px;
  cursor: pointer;
  -webkit-transition: background-color 150ms cubic-bezier(0.4,0,0.2,1),color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: background-color 150ms cubic-bezier(0.4,0,0.2,1),color 150ms cubic-bezier(0.4,0,0.2,1);
  color: rgba(102,102,102,1);
  background-color: rgba(255,255,255,1);
  font-weight: 400;
  color: rgba(26,122,248,1);
  background-color: rgba(26,122,248,0.04);
  font-weight: 600;
}

.c13:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c13:active {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c13 span {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c13:hover {
  color: rgba(26,122,248,1);
  background-color: rgba(26,122,248,0.08);
}

.c13:active {
  color: rgba(26,122,248,1);
  background-color: rgba(26,122,248,0.04);
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  box-sizing: border-box;
  padding: 0 12px;
  font-size: 12px;
  line-height: 32px;
  height: 32px;
  cursor: pointer;
  -webkit-transition: background-color 150ms cubic-bezier(0.4,0,0.2,1),color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: background-color 150ms cubic-bezier(0.4,0,0.2,1),color 150ms cubic-bezier(0.4,0,0.2,1);
  color: rgba(102,102,102,1);
  background-color: rgba(255,255,255,1);
  font-weight: 400;
  color: rgba(221,221,221,1);
  background-color: rgba(255,255,255,1);
  font-weight: 400;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c14:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c14:active {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c14 span {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c14:hover {
  color: rgba(221,221,221,1);
  background-color: rgba(255,255,255,1);
}

.c14:active {
  color: rgba(221,221,221,1);
  background-color: rgba(255,255,255,1);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: default;
}

.c9 {
  height: 1px;
}

.c2 {
  overflow-y: auto;
}

.c15 .c1 {
  max-height: 160px;
  padding-right: 4px;
}

.c15 .c1::-webkit-scrollbar {
  width: 4px;
  height: 4px;
}

.c15 .c1::-webkit-scrollbar-thumb {
  border-radius: 999rem;
  background-color: transparent;
}

.c15 .c1:hover::-webkit-scrollbar-thumb {
  background-color: rgba(51,51,51,0.12);
}

.c15 .c1:hover::-webkit-scrollbar-thumb:hover {
  background-color: rgba(51,51,51,0.16);
}

.c15 .c8 {
  background: rgba(238,238,238,1);
  margin: 5.5px 0px 5.5px 12px;
}

.c15 .c3 .c6 {
  padding-left: 24px;
}

.c15 .c4 {
  font-size: 12px;
  line-height: 24px;
  height: 24px;
  background: rgba(255,255,255,1);
  color: rgba(187,187,187,1);
  padding-left: 12px;
}

.c0 {
  box-shadow: 0 0 12px 0 rgba(102,102,102,0.12);
  background: rgba(255,255,255,1);
  border-radius: 2px;
  padding: 4px 0;
  overflow: hidden;
  width: 200px;
}

.c0 .c8 {
  background: rgba(238,238,238,1);
  margin: 5.5px 12px 5.5px 12px;
}

.c0 .c3 .c6 {
  padding-left: 24px;
}

.c0 .c4 {
  font-size: 12px;
  line-height: 24px;
  height: 24px;
  background: rgba(255,255,255,1);
  color: rgba(187,187,187,1);
  padding-left: 12px;
}

.c12 {
  -webkit-animation: iECmZH 0.75s linear infinite,keNNsN 1.5s linear infinite;
  animation: iECmZH 0.75s linear infinite,keNNsN 1.5s linear infinite;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3 "
    >
      <span
        className="c4 c5"
      >
        分组一
      </span>
      <div
        className="c6 c7"
      >
        <span>
          选项一
        </span>
      </div>
      <div
        className="c6 c7"
      >
        <span>
          选项二
        </span>
      </div>
    </div>
    <div
      className="c8 c9"
    />
    <div
      className="c6 c7"
    >
      <span>
        选项普通
      </span>
      <span
        className="c10"
        direction="column"
      >
        <span
          className=""
        >
          <svg
            aria-hidden="false"
            className="c11 c12"
            focusable="false"
            preserveAspectRatio="xMidYMid"
            style={
              Object {
                "color": "inherit",
                "flexShrink": 0,
                "marginLeft": 12,
              }
            }
            viewBox="0 0 100 100"
          >
            <circle
              cx="50"
              cy="50"
              fill="none"
              r="45"
              stroke="rgba(26,122,248,1)"
              strokeLinecap="round"
              strokeWidth="10"
              transform="rotate(144 50 50)"
            />
          </svg>
        </span>
        <span />
      </span>
    </div>
    <div
      className="c6 c13"
    >
      <span>
        选项选中
      </span>
      <svg
        aria-hidden="false"
        className="c11"
        focusable="false"
        style={
          Object {
            "color": "inherit",
            "flexShrink": 0,
            "marginLeft": 12,
          }
        }
        viewBox="0 0 1024 1024"
      >
        <path
          d="M407.787 619.136l454.517-448.47 119.03 116.96-558.4 550.945a21.333 21.333 0 01-29.931.032L42.667 494.1l118.826-117.16 246.294 242.197z"
        />
      </svg>
    </div>
    <div
      className="c6 c14"
    >
      <span>
        选项禁用
      </span>
    </div>
    <div
      className="c6 c7"
    >
      <span>
        选项加载
      </span>
      <span
        className="c10"
        direction="column"
      >
        <span
          className=""
        >
          <svg
            aria-hidden="false"
            className="c11 c12"
            focusable="false"
            preserveAspectRatio="xMidYMid"
            style={
              Object {
                "color": "inherit",
                "flexShrink": 0,
                "marginLeft": 12,
              }
            }
            viewBox="0 0 100 100"
          >
            <circle
              cx="50"
              cy="50"
              fill="none"
              r="45"
              stroke="rgba(26,122,248,1)"
              strokeLinecap="round"
              strokeWidth="10"
              transform="rotate(144 50 50)"
            />
          </svg>
        </span>
        <span />
      </span>
    </div>
  </div>
</div>
`;

exports[`测试普通渲染 1`] = `
.c11 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-style: normal;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1em;
  height: 1em;
  overflow: hidden;
  fill: currentColor;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  box-sizing: border-box;
  padding: 0 12px;
  font-size: 12px;
  line-height: 32px;
  height: 32px;
  cursor: pointer;
  -webkit-transition: background-color 150ms cubic-bezier(0.4,0,0.2,1),color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: background-color 150ms cubic-bezier(0.4,0,0.2,1),color 150ms cubic-bezier(0.4,0,0.2,1);
  color: rgba(102,102,102,1);
  background-color: rgba(255,255,255,1);
  font-weight: 400;
}

.c7:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c7:active {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c7 span {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  box-sizing: border-box;
  padding: 0 12px;
  font-size: 12px;
  line-height: 32px;
  height: 32px;
  cursor: pointer;
  -webkit-transition: background-color 150ms cubic-bezier(0.4,0,0.2,1),color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: background-color 150ms cubic-bezier(0.4,0,0.2,1),color 150ms cubic-bezier(0.4,0,0.2,1);
  color: rgba(102,102,102,1);
  background-color: rgba(255,255,255,1);
  font-weight: 400;
  color: rgba(26,122,248,1);
  background-color: rgba(26,122,248,0.04);
  font-weight: 600;
}

.c13:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c13:active {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c13 span {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c13:hover {
  color: rgba(26,122,248,1);
  background-color: rgba(26,122,248,0.08);
}

.c13:active {
  color: rgba(26,122,248,1);
  background-color: rgba(26,122,248,0.04);
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  box-sizing: border-box;
  padding: 0 12px;
  font-size: 12px;
  line-height: 32px;
  height: 32px;
  cursor: pointer;
  -webkit-transition: background-color 150ms cubic-bezier(0.4,0,0.2,1),color 150ms cubic-bezier(0.4,0,0.2,1);
  transition: background-color 150ms cubic-bezier(0.4,0,0.2,1),color 150ms cubic-bezier(0.4,0,0.2,1);
  color: rgba(102,102,102,1);
  background-color: rgba(255,255,255,1);
  font-weight: 400;
  color: rgba(221,221,221,1);
  background-color: rgba(255,255,255,1);
  font-weight: 400;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c14:hover {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c14:active {
  color: rgba(102,102,102,1);
  background-color: rgba(250,250,250,1);
}

.c14 span {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c14:hover {
  color: rgba(221,221,221,1);
  background-color: rgba(255,255,255,1);
}

.c14:active {
  color: rgba(221,221,221,1);
  background-color: rgba(255,255,255,1);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: default;
}

.c9 {
  height: 1px;
}

.c2 {
  overflow-y: auto;
}

.c0 {
  box-shadow: 0 0 12px 0 rgba(102,102,102,0.12);
  background: rgba(255,255,255,1);
  border-radius: 2px;
  padding: 4px 0;
  overflow: hidden;
  padding-right: 4px;
}

.c0 .c1 {
  max-height: 160px;
  padding-right: 4px;
}

.c0 .c1::-webkit-scrollbar {
  width: 4px;
  height: 4px;
}

.c0 .c1::-webkit-scrollbar-thumb {
  border-radius: 999rem;
  background-color: transparent;
}

.c0 .c1:hover::-webkit-scrollbar-thumb {
  background-color: rgba(51,51,51,0.12);
}

.c0 .c1:hover::-webkit-scrollbar-thumb:hover {
  background-color: rgba(51,51,51,0.16);
}

.c0 .c8 {
  background: rgba(238,238,238,1);
  margin: 5.5px 0px 5.5px 12px;
}

.c0 .c3 .c6 {
  padding-left: 24px;
}

.c0 .c4 {
  font-size: 12px;
  line-height: 24px;
  height: 24px;
  background: rgba(255,255,255,1);
  color: rgba(187,187,187,1);
  padding-left: 12px;
}

.c12 {
  -webkit-animation: iECmZH 0.75s linear infinite,keNNsN 1.5s linear infinite;
  animation: iECmZH 0.75s linear infinite,keNNsN 1.5s linear infinite;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3 "
    >
      <span
        className="c4 c5"
      >
        分组一
      </span>
      <div
        className="c6 c7"
      >
        <span>
          选项一
        </span>
      </div>
      <div
        className="c6 c7"
      >
        <span>
          选项二
        </span>
      </div>
    </div>
    <div
      className="c8 c9"
    />
    <div
      className="c6 c7"
    >
      <span>
        选项普通
      </span>
      <span
        className="c10"
        direction="column"
      >
        <span
          className=""
        >
          <svg
            aria-hidden="false"
            className="c11 c12"
            focusable="false"
            preserveAspectRatio="xMidYMid"
            style={
              Object {
                "color": "inherit",
                "flexShrink": 0,
                "marginLeft": 12,
              }
            }
            viewBox="0 0 100 100"
          >
            <circle
              cx="50"
              cy="50"
              fill="none"
              r="45"
              stroke="rgba(26,122,248,1)"
              strokeLinecap="round"
              strokeWidth="10"
              transform="rotate(144 50 50)"
            />
          </svg>
        </span>
        <span />
      </span>
    </div>
    <div
      className="c6 c13"
    >
      <span>
        选项选中
      </span>
      <svg
        aria-hidden="false"
        className="c11"
        focusable="false"
        style={
          Object {
            "color": "inherit",
            "flexShrink": 0,
            "marginLeft": 12,
          }
        }
        viewBox="0 0 1024 1024"
      >
        <path
          d="M407.787 619.136l454.517-448.47 119.03 116.96-558.4 550.945a21.333 21.333 0 01-29.931.032L42.667 494.1l118.826-117.16 246.294 242.197z"
        />
      </svg>
    </div>
    <div
      className="c6 c14"
    >
      <span>
        选项禁用
      </span>
    </div>
    <div
      className="c6 c7"
    >
      <span>
        选项加载
      </span>
      <span
        className="c10"
        direction="column"
      >
        <span
          className=""
        >
          <svg
            aria-hidden="false"
            className="c11 c12"
            focusable="false"
            preserveAspectRatio="xMidYMid"
            style={
              Object {
                "color": "inherit",
                "flexShrink": 0,
                "marginLeft": 12,
              }
            }
            viewBox="0 0 100 100"
          >
            <circle
              cx="50"
              cy="50"
              fill="none"
              r="45"
              stroke="rgba(26,122,248,1)"
              strokeLinecap="round"
              strokeWidth="10"
              transform="rotate(144 50 50)"
            />
          </svg>
        </span>
        <span />
      </span>
    </div>
  </div>
</div>
`;
